# unimodel

./: .gitignore  .mise.toml  README.md  pyproject.toml  pytest.ini
docs/: adapters.md  scopes.md
docs/assets/: logo.sketch
tests/: adapters_test.py  scope_test.py  universal_value_test.py  variables_test.py
unimodel/: __init__.py  adapters.py  client.py  decorators.py  errors.py  models.py  prompt.py  protocols.py  schemas.py  scope.py  utils.py
unimodel/adapters/: __init__.py  anthropic.py  dummy.py  lazy.py  openai.py  replicate.py  utils.py
